Regenerate all clients using latest OAG and Swaggy C.